--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "lsp-sample",
-	"description": "A language server example",
-	"author": "Microsoft Corporation",
+	"description": "LSP 语言服务，完成对代码诊断修复",
+	"author": "zhuangbing.cai",
 	"license": "MIT",
 	"version": "1.0.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/hugheschoi/lsp-extension"
 	},
 	"publisher": "vscode-samples",
 	"categories": [],
@@ -17,7 +17,7 @@
 		"vscode": "^1.43.0"
 	},
 	"activationEvents": [
-		"onLanguage:plaintext"
+		"onLanguage:vue"
 	],
 	"main": "./client/out/extension",
 	"contributes": {
@@ -61,5 +61,10 @@
 		"eslint": "^7.26.0",
 		"mocha": "^8.3.2",
 		"typescript": "^4.3.5"
+	},
+	"dependencies": {
+		"@babel/parser": "^7.18.8",
+		"@babel/traverse": "^7.18.8",
+		"@vue/compiler-dom": "^3.2.37"
 	}
 }
